--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,6 +77,12 @@ body{
 	text-transform: uppercase;
 	border-radius: 40px;
 	outline: none;
+	&:hover{
+		border: 1px solid #000;
+	}
+	&:active{
+		color: #000;
+	}
 }
 .side-button{
 	top: 95%;
